--- a/captcha_cracker.ipynb
+++ b/captcha_cracker.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 준비물\n",
     "\n",
-    "### 가상환경 : Captcha Crack을 하기 위해서는 패키지간의 호환이 필요하며 이를 위해 반드시 다운그레이드르 해야한다. 이 과정에서 패키지간의 충돌이 발생할 가능성이 높기 때문에 처음부터 가상환경을 설치 후 버전에 맞는 패키지 설치가 필요하다. 가상환경의 패키지는 아나콘다 프롬프트에서 가상환경 접속 후 pip install을 통해서 설치하면 된다.\n",
+    "### 가상환경 : Captcha Crack을 하기 위해서는 패키지간의 호환이 필요하며 이를 위해 반드시 다운그레이드를 해야한다. 이 과정에서 패키지간의 충돌이 발생할 가능성이 높기 때문에 처음부터 가상환경을 설치 후 버전에 맞는 패키지 설치가 필요하다. 가상환경의 패키지는 아나콘다 프롬프트에서 가상환경 접속 후 pip install을 통해서 설치하면 된다.\n",
     "\n",
     "#### Python version : 3.9.0 \n",
     "\n",
