--- a/captcha_cracker.ipynb
+++ b/captcha_cracker.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "# train 데이터 수집 - 새마을금고 정기공시 사이트\n",
-    "## 현재 시점(2025.01.10) 새마을금고 정기공시 조회 시 캡차 문자가 사라짐"
+    "## 현재 시점(2025.01.10) 새마을금고 정기공시 조회 시 캡차 문자가 사라져서 Github에 라벨링 된 데이터 압축 파일로 업로드"
    ]
   },
   {
